Udemy/kubernetes_hands_on_deploy_microservice/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
  # This defines which pods are going to be represented by this service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: webapp
    release: "0"

  ports:
    - name: http
      port: 80
      nodePort: 30080
  
  # ClusterIP or NodePort or LoadBalancer
  # ClusterIP for internal app
  # NodePort for local access 
  type: NodePort
